--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h2 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h2>
+            <span class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></span>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
