--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about/">About</a>
-            <a href="{{ site.baseurl }}/tags/tagAleatoire.html">Tag Aléatoire</a>
+            <a href="{{ site.baseurl }}/ttagAleatoire/">Tag Aléatoire</a>
           </nav>
         </header>
       </div>
