--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,15 +11,18 @@ layout: default
     <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
-<div class="posts">
-  {% for post in site.tags[page.tag] %}
-    <article class="post">
-      <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-      <div class="entry">
-        {{ post.excerpt }}
-      </div>
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Lire la suite</a>
-    </article>
+<div>
+  {% for tag in page.tags %}
+    {% for post in site.tags[tag] %}
+      <article class="post">
+        <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
+        <div class="entry">
+          {{ post.excerpt }}
+        </div>
+        <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Lire la suite</a>
+      </article>
+    {% endfor %}
   {% endfor %}
+</div>
   {% include disqus.html %}
 </article>
